--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^4.0.2
   firebase_core: ^2.1.0
   firebase_database: ^10.0.2
+  provider: ^6.0.4
+  sqflite: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
