--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   fluentui_icons: ^1.0.0
-  get: 
+  get: ^4.6.5
   gap: ^2.0.0
   firebase_auth: ^4.0.2
   firebase_core: ^2.1.0
